service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ok-app
  name: ok-app
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
  selector:
    app: ok-app
  type: NodePort
