ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ok-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.+)
          pathType: Prefix
          backend:
            service:
              name: ok-app
              port:
                number: 80
